--- a/templates/myblog/base.html
+++ b/templates/myblog/base.html
@@ -44,9 +44,7 @@
                             <li class="cl-effect-11"><a href="{% url 'myblog:index' %}" data-hover="首页">首页</a></li>
                             <li class="cl-effect-11"><a href="full-width.html" data-hover="博客">博客</a></li>
                             <li class="cl-effect-11"><a href="https://xusanpangzi.github.io" data-hover="关于">关于</a></li>
-                            <li class="cl-effect-11"><a href="https://www.baidu.com" data-hover="联系">联系</a></li>
-=======
-                            <li class="cl-effect-11"><a href="contact.html" data-hover="联系">联系</a></li>
+                            <li class="cl-effect-11"><a href="https://www.jd.com" data-hover="联系">联系</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </nav>
