--- a/templates/myblog/base.html
+++ b/templates/myblog/base.html
@@ -3,7 +3,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Black &amp; White</title>
+    <title>Black &amp;amp; White</title>
+    <style>
+        span.highlighted{
+            color: red;
+        }
+    </style>
 
     <!-- meta -->
     <meta charset="UTF-8">
@@ -42,17 +47,17 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="cl-effect-11"><a href="{% url 'myblog:index' %}" data-hover="首页">首页</a></li>
-                            <li class="cl-effect-11"><a href="full-width.html" data-hover="博客">博客</a></li>
-                            <li class="cl-effect-11"><a href="https://xusanpangzi.github.io" data-hover="关于">关于</a></li>
-                            <li class="cl-effect-11"><a href="https://www.jd.com" data-hover="联系">联系</a></li>
+                            <li class="cl-effect-11"><a href="https://github.com/xusanpangzi" data-hover="Github">Github</a></li>
+                            <li class="cl-effect-11"><a href="https://xusanpangzi.github.io" data-hover="胡说八道">胡说八道</a></li>
+                            <li class="cl-effect-11"><a href="mailto:767306336@qq.com" data-hover="联系">联系</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </nav>
                 <div id="header-search-box">
                     <a id="search-menu" href="#"><span id="search-icon" class="ion-ios-search-strong"></span></a>
                     <div id="search-form" class="search-form">
-                        <form role="search" method="get" id="searchform" action="#">
-                            <input type="search" placeholder="搜索" required>
+                        <form role="search" method="get" id="searchform" action="{% url 'haystack_search' %}">
+                            <input type="search"  name="q" placeholder="搜索" required>
                             <button type="submit"><span class="ion-ios-search-strong"></span></button>
                         </form>
                     </div>
@@ -62,7 +67,7 @@
     </header>
 </div>
 <div class="copyrights">Collect from <a href="http://www.cssmoban.com/">网页模板</a></div>
-<div class="copyrights">Modified by <a href="http://zmrenwu.com/">追梦人物的博客</a></div>
+<div class="copyrights">Modified by <a href="http://zmrenwu.com/">追梦人物</a></div>
 
 <div class="content-body">
     <div class="container">
@@ -107,7 +112,9 @@
                     <ul>
                         {% for category in category_list %}
                         <li>
-                            <a href="#">{{ category.name }} <span class="post-count">(13)</span></a>
+                            <a href="{% url 'myblog:category' category.pk %}">{{ category.name }}
+                                <span class="post-count">({{ category.num_posts }})</span>
+                            </a>
                         </li>
                         {% empty %}
                         暂无分类
@@ -117,41 +124,19 @@
 
                 <div class="widget widget-tag-cloud">
                     <h3 class="widget-title">标签云</h3>
+                    {% get_tags as tag_list %}
                     <ul>
+                        {% for tag in tag_list %}
                         <li>
-                            <a href="#">Django</a>
+                            <a href="{% url 'myblog:tag' tag.pk %}">{{ tag.name }}</a>
                         </li>
-                        <li>
-                            <a href="#">Python</a>
-                        </li>
-                        <li>
-                            <a href="#">Java</a>
-                        </li>
-                        <li>
-                            <a href="#">笔记</a>
-                        </li>
-                        <li>
-                            <a href="#">文档</a>
-                        </li>
-                        <li>
-                            <a href="#">AngularJS</a>
-                        </li>
-                        <li>
-                            <a href="#">CSS</a>
-                        </li>
-                        <li>
-                            <a href="#">JavaScript</a>
-                        </li>
-                        <li>
-                            <a href="#">Snippet</a>
-                        </li>
-                        <li>
-                            <a href="#">jQuery</a>
-                        </li>
+                        {% empty %}
+                        暂无标签！
+                        {% endfor %}
                     </ul>
                 </div>
                 <div class="rss">
-                    <a href=""><span class="ion-social-rss-outline"></span> RSS</a>
+                    <a href="{% url 'rss' %}"><span class="ion-social-rss-outline"></span> RSS订阅</a>
                 </div>
             </aside>
         </div>
@@ -163,7 +148,7 @@
             <div class="col-md-12">
                 <p class="copyright">&copy 2017 - 采集自<a href="http://www.cssmoban.com/"
                                                         target="_blank" title="模板之家">模板之家</a>
-                    - 由<a href="http://zmrenwu.com/" title="网页模板" target="_blank">追梦人物</a>修改
+                    - 由<a href="http://zmrenwu.com/" title="网页模板" target="_blank">追梦</a>修改
                 </p>
             </div>
         </div>
@@ -176,9 +161,9 @@
     <nav>
         <ul>
             <li><a href="{% url 'myblog:index' %}">首页</a></li>
-            <li><a href="full-width.html">博客</a></li>
+            <li><a href="https://github.com/xusanpangzi/">博客</a></li>
             <li><a href="https://xusanpangzi.github.io">关于</a></li>
-            <li><a href="contact.html">联系</a></li>
+            <li><a href="mailto:767306336@qq.com">联系</a></li>
         </ul>
     </nav>
 </div>
